<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context="eslam.emad.bloodbank.ui.fragments.ResetPasswordFragment">

    <ImageView
        android:id="@+id/fragment_new_password_img_view"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_above="@id/fragment_new_password_check_code_et"
        android:layout_centerHorizontal="true"
        android:src="@drawable/white_blood" />

    <EditText
        android:id="@+id/fragment_new_password_check_code_et"
        style="@style/registerFragmentStyle"
        android:hint="@string/check_code"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_above="@id/fragment_new_password_new_password_et"
        android:gravity="end"/>

    <EditText
        android:id="@+id/fragment_new_password_new_password_et"
        style="@style/registerFragmentStyle"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:gravity="end"
        android:layout_centerInParent="true"
        />

    <EditText
        android:id="@+id/fragment_new_password_new_password_again_et"
        style="@style/registerFragmentStyle"
        android:hint="@string/new_password_again"
        android:inputType="textPassword"
        android:gravity="end"
        android:layout_below="@id/fragment_new_password_new_password_et" />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/checkboxrememberme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/fragment_new_password_enter_btn"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_centerHorizontal="true"
        android:text="showPassword"/>

    <Button
        android:id="@+id/fragment_new_password_enter_btn"
        style="@style/buttonStyle"
        android:text="@string/change"
        android:layout_below="@id/fragment_new_password_new_password_again_et"
        android:layout_marginTop="24dp" />
</RelativeLayout>