<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="eslam.emad.bloodbank.ui.fragments.ProfileFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/fragment_profile_back_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:paddingStart="@dimen/_12sdp"
                android:src="@drawable/ic_arrow_back_white" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:minHeight="?actionBarSize"
                android:padding="@dimen/appbar_padding"
                android:text="@string/modify_data"
                android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title" />
        </RelativeLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/fragment_profile_name_edit_text"
                style="@style/registerFragmentStyle"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:layout_marginTop="@dimen/_12sdp"
                android:drawableEnd="@drawable/ic_person_black_24dp"
                android:hint="@string/name" />

            <EditText
                android:id="@+id/fragment_profile_email_edit_text"
                style="@style/registerFragmentStyle"
                android:drawableEnd="@drawable/ic_mail"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/fragment_profile_birth_edit_text"
                style="@style/registerFragmentStyle"
                android:drawableEnd="@drawable/calendar"
                android:hint="@string/birthday" />

            <RelativeLayout
                android:id="@+id/relative_one"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="12dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/rectangle">

                <ImageView
                    android:id="@+id/img1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="12dp"
                    android:src="@drawable/blood_drop"
                    android:layout_marginEnd="@dimen/_5sdp"/>

                <Spinner
                    android:id="@+id/fragment_profile_blood_type_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:layout_toStartOf="@+id/img1"
                    android:entries="@array/BloodTypes"
                    android:spinnerMode="dialog"
                    android:gravity="end"
                    style="@style/SpinnerwithNoArrow"
                    android:background="@drawable/rectangle" />


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginBottom="@dimen/_8sdp"
                    android:src="@drawable/drop_down"
                    android:layout_marginStart="@dimen/_12sdp"/>

            </RelativeLayout>

            <TextView
                android:id="@+id/fragment_register_last_donation_edit_text"
                style="@style/registerFragmentStyle"
                android:drawableEnd="@drawable/calendar"
                android:hint="@string/last_donation_date"/>

            <RelativeLayout
                android:id="@+id/relative_two"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="12dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/rectangle">

                <ImageView
                    android:id="@+id/img2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="12dp"
                    android:src="@drawable/ic_home_black_24dp"
                    android:layout_marginEnd="@dimen/_16sdp"/>

                <Spinner
                    android:id="@+id/fragment_profile_governarate_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:layout_toStartOf="@+id/img2"
                    android:entries="@array/BloodTypes"
                    android:spinnerMode="dialog"
                    android:gravity="end"
                    android:layout_marginEnd="@dimen/_16sdp"
                    style="@style/SpinnerwithNoArrow"
                    android:background="@drawable/rectangle" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginBottom="@dimen/_8sdp"
                    android:src="@drawable/drop_down"
                    android:layout_marginStart="@dimen/_12sdp"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relative_three"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="12dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/rectangle">

                <ImageView
                    android:id="@+id/img3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="12dp"
                    android:src="@drawable/ic_home_black_24dp"
                    android:layout_marginEnd="@dimen/_16sdp"/>

                <Spinner
                    android:id="@+id/fragment_profile_city_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:layout_toStartOf="@+id/img3"
                    android:entries="@array/BloodTypes"
                    android:spinnerMode="dialog"
                    android:gravity="end"
                    android:layout_marginEnd="@dimen/_16sdp"
                    style="@style/SpinnerwithNoArrow"
                    android:background="@drawable/rectangle"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginBottom="@dimen/_8sdp"
                    android:src="@drawable/drop_down"
                    android:layout_marginStart="@dimen/_12sdp"/>
            </RelativeLayout>

            <EditText
                android:id="@+id/fragment_profile_phone_number_edit_text"
                style="@style/registerFragmentStyle"
                android:drawableEnd="@drawable/ic_phone"
                android:inputType="phone"
                android:hint="@string/phone" />

            <EditText
                android:id="@+id/fragment_profile_password_edit_text"
                style="@style/registerFragmentStyle"
                android:drawableEnd="@drawable/ic_password"
                android:hint="@string/password"
                android:gravity="end"
                android:inputType="textPassword"  />

            <EditText
                android:id="@+id/fragment_profile_password_again_edit_text"
                style="@style/registerFragmentStyle"
                android:drawableEnd="@drawable/ic_password"
                android:hint="@string/new_password_again"
                android:gravity="end"
                android:inputType="textPassword"/>

            <Button
                android:id="@+id/fragment_profile_enter_btn"
                android:text="@string/modify"
                android:layout_marginTop="18dp"
                android:layout_marginBottom="18dp"
                android:layout_gravity="center_horizontal"
                style="@style/buttonStyle2" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>