<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CCCACA"
    tools:context="eslam.emad.bloodbank.ui.fragments.NotificationFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/fragment_settings_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:minHeight="?actionBarSize"
                android:padding="@dimen/appbar_padding"
                android:text="@string/notification"
                android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title" />
        </RelativeLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/fragment_notification_imgv"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_150sdp"
        android:src="@drawable/alarm_icon"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/fragment_settings_app_bar"
        android:paddingEnd="@dimen/_36sdp"
        android:layout_marginBottom="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_36sdp"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/fragment_notification_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/_16sdp"
        android:layout_below="@id/fragment_notification_imgv"
        android:lineHeight="@dimen/_32sdp"
        android:text="@string/notification_txt"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/_20sdp"
        android:textStyle="bold"
        android:visibility="gone"/>

    <Button
        android:id="@+id/fragment_notification_btn"
        style="@style/orangeButton"
        android:layout_below="@id/fragment_notification_tv"
        android:layout_centerHorizontal="true"
        android:text="@string/modify"
        android:visibility="gone"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/fragment_notification_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/fragment_settings_app_bar"
        android:fastScrollEnabled="true"
        android:scrollbarStyle="insideInset"
        android:scrollbars="vertical"
        android:splitMotionEvents="false"
        android:verticalScrollbarPosition="right" />
</RelativeLayout>